apps/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: relay.mbund.org
    hajimari.io/icon: draw
    hajimari.io/group: External
spec:
  ingressClassName: public
  rules:
    - host: &host draw.mbund.org
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: excalidraw
                port:
                  name: http
  tls:
    - secretName: excalidraw-tls-certificate
      hosts:
        - *host
